--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,4 +3,5 @@ $second: #090c31;
 $third: #5853ff;
 $dark: rgb(44, 44, 44);
 $text1: "Roboto";
-$text2: cursive;
+$text2: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
